--- a/gb/24/4/28/n14235969.md
+++ b/gb/24/4/28/n14235969.md
@@ -1,78 +1,92 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美国房价涨不停 一个隐藏原因</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/04/id14235970-b044da33c4a02688337e21c835542a46-600x400.jpeg" />
 <h6>美国虽然利率居高不下，房价没有因此降低，不禁让人怀疑买房需求从何而来？（Shutterstock）
 </h6>
 <hr>
-	<p>【大纪元2024年04月28日讯】美国房价涨不停，虽然有部分地区因为疫情期间涨太多，现在有回降的现象，不过整体美国房价仍然是涨涨涨的趋势，只是涨幅没有疫情期间那么夸张。那为何现在房价还在涨？除了上市房供应量少、有众多的千禧世代到达买房年龄，还有在家工作模式的延续在推动买房之外，其实还有一个原因在默默地推动今天的房价。</p>
-<p>最近几年，美国涌入数以百万计的合法移民和非法移民。当然，非法移民方面给美国带来了包括医疗、住房、治安等许多方面的问题，甚至是造成危机。但是，众多的合法移民也为美国带来经济动能，增加了美国抵抗通货膨胀的韧性。今天这一集，我就要给大家分享最新的美国移民活动，给房地产市场带来怎么样的影响？是负面影响，还是正面影响呢？请看下面分析。</p>
+	<p>【大纪元2024年04月28日讯】美国房价涨不停，虽然有部分地区因为疫情期间涨太多，现在有回降的现象，不过整体美国房价仍然是涨涨涨的趋势，只是涨幅没有疫情期间那么夸张。那为何现在房价还在涨？除了上市房供应量少、有众多的千禧世代到达买房年龄，还有在家工作模式的延续在推动买房之外，其实还有一个原因在默默地推动今天的房价。（<strong>先前报导：<span style="color: #0000ff;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/1/8/n14153829.md#1?utm_term=djy_a_rec_in" target="_blank" rel="noopener noreferrer">糟糕了！美国房价又要飙起来？</a></span></strong>）</p>
+<p>最近几年，美国涌入数以百万计的合法移民和非法移民。当然，非法移民方面给美国带来了包括医疗、住房、治安等许多方面的问题，甚至是造成危机。但是，众多的合法移民也为美国带来经济动能，增加了美国抵抗通货膨胀的韧性。</p>
+<p>今天这一集，我就要给大家分享最新的美国移民活动，给房地产市场带来怎么样的影响？是负面影响，还是正面影响呢？请看下面分析。</p>
 <h2>美国人口洞见报告</h2>
-<p>美国房地产咨询研究公司：约翰柏恩斯（John Burns），他们最近正在致力于研究，美国的人口移动对房地产行业的影响。这个人口移动包括了，国外移民和美国国内的搬迁活动，影响甚是巨大。所以，约翰柏恩斯在四月初发布了一份人口分析报告，目的是帮助房地产行业做出正确的决策。</p>
+<p>美国房地产咨询研究公司约翰?柏恩斯（John Burns）说，他们最近正在致力于研究，美国的人口移动对房地产行业的影响。这个人口移动包括了，国外移民和美国国内的搬迁活动，影响甚是巨大。</p>
+<p>所以，约翰柏恩斯在四月初发布了一份人口分析报告，目的是帮助房地产行业做出正确的决策。</p>
 <h3>1. 2023年人口成长最多</h3>
 <p>在这份美国人口洞见报告，点出了四个重点：第一、报告中发现，2023年移民推动了美国历史上最大的人口成长。据统计，2023年美国人口增加简直是冲破了天际，增加380万人，在历年来是一支独秀。美国人口普查局在去年底的一份新闻稿中也声明，2023年人口有成长的州数量，比疫情爆发以来的任何一年都要多。</p>
-<figure id="attachment_14235971" aria-describedby="caption-attachment-14235971" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14235971-6858bfe0727a0cce7cf728edbc523220.jpeg"><img class="size-large wp-image-14235971" src="https://i.epochtimes.com/assets/uploads/2024/04/id14235971-6858bfe0727a0cce7cf728edbc523220-600x365.jpeg" alt="" width="600" b="365" /></a><figcaption id="caption-attachment-14235971" class="wp-caption-text">疫情过后美国移民众多，造成人口增长大幅上升。（Shutterstock）</figcaption></figure>
+<figure id="attachment_14235971" aria-describedby="caption-attachment-14235971" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14235971-6858bfe0727a0cce7cf728edbc523220.jpeg"><img decoding="async" class="size-large wp-image-14235971" src="https://i.epochtimes.com/assets/uploads/2024/04/id14235971-6858bfe0727a0cce7cf728edbc523220-600x365.jpeg" alt="" width="600" b="365" /></a><figcaption id="caption-attachment-14235971" class="wp-caption-text">疫情过后美国移民众多，造成人口增长大幅上升。（Shutterstock）</figcaption></figure>
 <p>人口普查局的统计学家说：“尽管出生率下降，但死亡人数也下降了近9%，加上移民数量回升，导致美国经历了2018年以来，最大的人口增长。”人口普查局统计全美增加160万人，年增幅是0.5%，全美人口数达到约3亿3500万人。</p>
 <p>柏恩斯的人口成长统计，比人口普查局的还要多超过一倍，应该是加上了不少隐性的移民人口数量。不管如何，美国的人口增加，确实给住房市场和经济带来了活水，不仅支撑了住房需求，还增加了劳动力能量，并且还帮助冷却了工资通胀，因为通常本地人的工资，会比新移民的还要高昂。</p>
 <p>人口普查局显示，人口增加最多的是美国南部地区，所以南部的经济扩张就占了全美的87%，因为南部是唯一在疫情期间，人口还保持增长的地方，而且在后疫情时代也是增加最多的地方。其它地区，中西部、西部也有十几万人口的增加，唯独东北部，是四大地区中人口减少的，事实上东北部只有纽约州和宾州出现减少，不过减少幅度已经比2022年缓和许多。</p>
 <p>这些人口红利都在帮助美国支撑经济，这也难怪买房的需求总是多过供应，除了有来自国内的需求，再加上国际移民的需求，导致在有限的供应之下，一直推升房价的上涨。</p>
-<p><span style="color: #0000ff;">幕后黑手！推动房价涨不停！美国人口洞见报告 四大重点｜人口移动对2024房市的三大影响【 #美国地产热点 】4/26/2024</span><br />
-<a title="幕后黑手！推动房价涨不停！美国人口洞见报告 四大重点｜人口移动对2024房市的三大影响【 #美国地产热点 】4/26/2024" src="https://www.ganjingworld.com/zh-TW/embed/1gn0glpgc3nF0rAEprmPawBEC1i31c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><span style="color: #0000ff;">幕后黑手！推动房价涨不停！美国人口洞见报告 四大重点｜人口移动对2024房市的三大影响【 #美国地产热点 】4/26/2024</span></p>
+<p><center><a title="幕后黑手！推动房价涨不停！美国人口洞见报告 四大重点｜人口移动对2024房市的三大影响【 #美国地产热点 】4/26/2024" src="https://www.ganjingworld.com/zh-TW/embed/1gn0glpgc3nF0rAEprmPawBEC1i31c" width="640" b="360” frameborder=" allowfullscreen="allowfullscreen"></a></center></p>
 <h3>2. 55岁以上人口 握有大量资产</h3>
-<p>在柏恩斯的人口报告中，第二个发现的是1970年之前出生的美国居民，掌控着107万亿（兆）美元的财富。尽管抵押贷款利率上升，但是前所未有的财富创造，正在刺激住房需求。许多婴儿潮世代的人，1950年代和1960年代出生的人，他们的财富在过去十年中翻了一倍，导致更多人有办法为自己和孩子购买房屋，或者是改造房屋。</p>
+<p>在柏恩斯的人口报告中，第二个发现的是1970年之前出生的美国居民，掌控着107万亿（兆）美元的财富。尽管抵押贷款利率上升，但是前所未有的财富创造，正在刺激住房需求。</p>
+<p>许多婴儿潮世代的人，1950年代和1960年代出生的人，他们的财富在过去十年中翻了一倍，导致更多人有办法为自己和孩子购买房屋，或者是改造房屋。</p>
 <p>分析中指出，1950年代和1960年代出生的人，他们的财富增长曲线非常陡峭，比1940、1930的人还要多，不过这也是因为1940、1930这些年代的人可能很多都已经过世了。</p>
 <p>总之，这些年长者在房地产上累积的财富，相当惊人，这也就是为什么买房要尽量趁早，在家庭收入还在成长的时候，尽快在房地产上投入成本，如此一来长期收到的回报就会相当可观。</p>
 <h3>3. 在家工作模式正常化</h3>
-<p>报告上的第三个重点是，现在在家工作的人数比例，是2019年的4倍。在家工作已经形成正常化，在家工作的时间，已经占全天工作时间的三成左右。虽然，我们看到这种情况在疫情过后，逐渐消退，但仍然为全美房价实惠的地区，创造了对住房的需求，这也让房屋建筑商和租赁开发商，可以往更偏远的地方开发住房，更轻松的购买和承保土地。</p>
+<p>报告上的第三个重点是，现在在家工作的人数比例，是2019年的4倍。在家工作已经形成正常化，在家工作的时间，已经占全天工作时间的三成左右。</p>
+<p>虽然，我们看到这种情况在疫情过后，逐渐消退，但仍然为全美房价实惠的地区，创造了对住房的需求，这也让房屋建筑商和租赁开发商，可以往更偏远的地方开发住房，更轻松地购买和承包土地。</p>
 <h3>4. “银色海啸”没有出现</h3>
-<p>报告中的第四个重点，发现婴儿潮世代的房源并不是所谓的“银色海啸”。以往我们总是认为婴儿潮世代会出现换房潮，或者在过世后，由下一代上市房屋。但是，情况并没有我们想像中的那么庞大。据统计，到2033年，婴儿潮世代的死亡将导致每年有77.2万套房屋挂牌出售——这个数字看起不少，但其实不到所有自住房的 1%。因为不是所有婴儿潮世代的房屋都会出售，有许多房屋其实会转变为出租单位。</p>
-<p>分析中，这些老年屋主的上市房产，在疫情开始后有所增加，但是并没有暴增的趋势，而且预计在未来的十年，也只会缓慢的增加到每年近八十万套。换句话说，要期望“银色海啸”为房市带来活水，是不用太奢望了。还是得让建筑商多多盖房子，一些蓝州的建筑政策、环保政策要多松绑，才有办法加速盖房的速度。否则，美国房地产市场等不到“银色海啸”，已经先被“移民浪潮”给淹没了。市场供不应求，房价只会越来越贵！</p>
-<figure id="attachment_14235972" aria-describedby="caption-attachment-14235972" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14235972-79478040ed48d1cf41ded0b0a7f72c94.jpeg"><img class="size-large wp-image-14235972" src="https://i.epochtimes.com/assets/uploads/2024/04/id14235972-79478040ed48d1cf41ded0b0a7f72c94-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14235972" class="wp-caption-text">增建房屋成为美国住房市场的当务之急，以缓解供应量缺乏的危机。（Shutterstock）</figcaption></figure>
+<p>报告中的第四个重点，发现婴儿潮世代的房源并不是所谓的“银色海啸”。以往我们总是认为婴儿潮世代会出现换房潮，或者在过世后，由下一代上市房屋。但是，情况并没有我们想像中的那么庞大。</p>
+<p>据统计，到2033年，婴儿潮世代的死亡将导致每年有77.2万套房屋挂牌出售——这个数字看起不少，但其实不到所有自住房的 1%。因为不是所有婴儿潮世代的房屋都会出售，有许多房屋其实会转变为出租单位。</p>
+<p>分析中，这些老年屋主的上市房产，在疫情开始后有所增加，但是并没有暴增的趋势，而且预计在未来的十年，也只会缓慢的增加到每年近八十万套。换句话说，要期望“银色海啸”为房市带来活水，是不用太奢望了。还是得让建筑商多多盖房子，一些蓝州的建筑政策、环保政策要多松绑，才有办法加速盖房的速度。</p>
+<p>否则，美国房地产市场等不到“银色海啸”，已经先被“移民浪潮”给淹没了。市场供不应求，房价只会越来越贵！（<strong>延伸阅读：<span style="color: #0000ff;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/4/22/n14231767.md#1?utm_term=djy_a_rec_in" target="_blank" rel="noopener noreferrer">美国这些大城市房价在不到七年翻了一番</a></span></strong>）</p>
+<figure id="attachment_14235972" aria-describedby="caption-attachment-14235972" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/04/id14235972-79478040ed48d1cf41ded0b0a7f72c94.jpeg"><img decoding="async" class="size-large wp-image-14235972" src="https://i.epochtimes.com/assets/uploads/2024/04/id14235972-79478040ed48d1cf41ded0b0a7f72c94-600x400.jpeg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14235972" class="wp-caption-text">增建房屋成为美国住房市场的当务之急，以缓解供应量缺乏的危机。（Shutterstock）</figcaption></figure>
 <h2>人口迁移对2024房市 三大影响</h2>
 <p>另外，针对不管是国际移民，或是美国境内的搬迁，伯恩斯也透过人口分析，看到三个在2024年对房地产市场的影响。了解这些变化对开发商、建筑商，或者是机构投资人、个人投资者都有很大的裨益，你会知道不同地区、城市有哪些人口流动，而人口是一切经济的根基，不同的年龄又会有不同的经济模式、消费习惯，所以我们才要定期的更新人口统计数据，来了解地区上的人口变化。</p>
 <h3>1. 搬家大潮已经结束</h3>
-<p>移民人口对2024年房市的第一个影响是，疫情以来的搬迁潮基本上已经结束，2020到2021是美国的搬家大潮，从统计上发现，2022年开始搬家潮就已经大幅下降到1100万人（2021年是1290万），橘色是指在同一个都会区中搬家，蓝色是指从一个都会区搬迁到另一个都会区，作比较远距离的搬家，到了2023年，搬家人数再度大幅下降到970万人（回复到疫情前水平）。</p>
+<p>移民人口对2024年房市的第一个影响是，疫情以来的搬迁潮基本上已经结束，2020到2021是美国的搬家大潮，从统计上发现，2022年开始搬家潮就已经大幅下降到1100万人（2021年是1290万），橘色是指在同一个都会区中搬家，蓝色是指从一个都会区搬迁到另一个都会区，作比较远距离的搬家，到了2023年，搬家人数再度大幅下降到970万人（恢复到疫情前水平）。</p>
 <p>而且，现在在同一都会区中的搬家比例，再度大幅上升，2022年曾经下降比较多，2023年回升到接近68.5%。即便是在同一个都会区中搬家，搬到郊区的比例也在迅速下降，2021年的时候，曾经到最顶峰的近8%，2023年已经下降到7.4%。</p>
 <h3>2. 经济适用城市是热点</h3>
 <p>第二个影响是，现在主要的、价位比较高昂的都会区，这些都会区周边的小城市，因为房价相对实惠，越来越受到欢迎。因为房价高、利率高，大家只好往比较偏远的地方去住了。例如在德州奥斯汀、佛罗里达州奥兰多、科罗拉多州丹佛，这几个都会区周边的小城市，因为中位数房价都低于主要城市十万美元左右，所以就算会增加通勤时间，现在还是会有比较多的人口涌入。</p>
 <h3>3. 七类搬迁模式</h3>
 <p>第三个影响，表现在疫情前后，搬迁活动出现很大的变化，疫情期间受到比较多青睐的城市，现在未必再受到喜爱，有些则反过来，从人口外流，转变为人口增加。在分析中有35个主要城市，共分为七种流动类型：</p>
-<p>第一种类型非常吃香，在疫情中、疫情后都持续受到欢迎，南卡罗莱纳州的莫特尔海摊（Myrtle Beach）、北卡罗来纳州的罗里（Raleigh-Durham）就是这种幸运儿。第二种类型是之前受到欢迎，但是现在正在减弱，亚特兰大、达拉斯、纳什维尔、休士顿就是这类型的城市。</p>
+<p>第一种类型非常吃香，在疫情中、疫情后都持续受到欢迎，南卡罗莱纳州的莫特尔海摊（Myrtle Beach）、北卡罗来纳州的罗利（Raleigh-Durham）就是这种幸运儿。第二种类型是之前受到欢迎，但是现在正在减弱，亚特兰大、达拉斯、纳什维尔、休士顿就是这类型的城市。</p>
 <p>第三种类型也是之前受到欢迎，但是现在几乎没有人口增长，奥斯汀、凤凰城、拉斯维加斯、坦帕都是属于这类型城市。第四种类型的情况比较严峻，之前也受到欢迎，但现在人口出现负增长，奥兰多和佛罗里达州西南地区，就是这类型的城市。</p>
 <p>第五种类型是之前稍微有人口损失，现在却出现些微的人口成长，这种类型的人口变化就比较轻微，明尼阿波利斯（Minneapolis）、河滨市、沙加缅度都是属于这种城市。第六种类型是，之前有些微人口流失，现在却出现更多人口减少，发生这种现象的有旧金山东湾地区、圣荷西、盐湖城、圣地牙哥、费城，还有俄勒冈州的波特兰。</p>
 <p>第七种类型算是有惊无险吧，之前就有大规模的人口外移，但是在国际移民的进驻之下，抵消了人口流失，这种类型几乎都是美国一线大城市，比如纽约、旧金山、波士顿、迈阿密、洛杉矶、西雅图、芝加哥、华盛顿特区。这也确实不难理解，因为在疫情期间，这些有最多人口密度的大城市，有大量人口移居到郊区，或更远的城市，而疫情解封后，国际移民的涌入，这些最大城市往往就是最直接的接收者。</p>
 <p>透过了解这些人口移动，投资者就能进一步做出投资判断，开发商就能够知道往哪些地区购买土地、开发哪种类型的住房或是商业建筑，房地产经纪人也会知道哪里的房子更好卖。◇</p>
-<p>责任编辑：李曜宇</p>
+<p>责任编辑：李曜宇#</p>
+<div class="related-article" style="display: block;"><span style="color: #000; font-weight: bold;">推荐阅读：</span></div>
+<ul class="related-posts" style="color: #0000ff; list-style: inside;">
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/3/24/n14209824.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer">苦恼房价太贵？搬家到这里直接送土地！</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/23/11/18/n14119309.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer">在美国要赚多少钱才买得起房子 哪些人在买</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/23/12/6/n14131033.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer">美房地产协会预测：2024年21个都市房价跌幅较大</a></span></li>
+<li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/3/31/n14215248.md#1?utm_term=djy_a_rel_end" target="_blank" rel="noopener noreferrer">美房租连续降 买房还是租房？哪个更划算</a></span></li>
+</ul>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922172.md#1">美国房地产1月出现回暖！错过抄底时机？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144946.md#1">抵押贷款利率上升 供应紧张推高美国房价</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/4/n14194623.md#1">美国房地产佣金制度将大转变 屋主有福了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/3/17/n14204520.md#1">美国“房地产奥斯卡”哪些明星入榜了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/2/4/n13922172.md#1">美国房地产1月出现回暖！错过抄底时机？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/27/n14144946.md#1">抵押贷款利率上升 供应紧张推高美国房价</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/4/n14194623.md#1">美国房地产佣金制度将大转变 屋主有福了</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/3/17/n14204520.md#1">美国“房地产奥斯卡”哪些明星入榜了？</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/2/n10015819.md#1" target="_blank">文武：中共篡政（二）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/19/n11266537.md#1" target="_blank">聋哑人能说话 瘫痪人迈双腿 亲历者忆神迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/3/n9919603.md#1" target="_blank">王江火：“抗美援朝”不具备正义性</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/24/n10998917.md#1" target="_blank">影片：与全世界背道而行 中共为何打击善良</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/22/n14230977.md#1">【未解之谜】精准预言 易经大师曾仕强泄漏的天机：这些年分很关键</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/17/n14227563.md#1">坚定拒绝淫邪 积阴德得福报的实例</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/23/n14232524.md#1">原创歌曲首发《四?二五赞歌》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/6/n10956298.md#1">文艺复兴时期最伟大的肖像画家之一：小汉斯?霍尔班（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/25/n14234077.md#1">“会发光”的花卉画：扬?范?海瑟姆的写实主义</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/27/n14235252.md#1">【环球直击】布林肯警告中共不要威胁世界安全</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234701.md#1">【晚间新闻】偷半导体技术 两名中国公民在美被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/27/n14235253.md#1">【中国禁闻】布林肯会晤习近平 提系列关切问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234708.md#1">与习会面后 布林肯开新闻会公开访华内容</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/25/n14234192.md#1">对赌失败欠巨款？刘德华官宣开启内地巡演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/25/n14234264.md#1">日本女星井上朋子揭大陆演艺圈潜规则</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/24/n14233433.md#1">时隔30年 34岁郝劭文与49岁林志颖惊喜同框</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234301.md#1">胡歌上街疑为妻买包子 获网友赞“好接地气”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/25/n14233746.md#1">Paul Kim宣布结婚：她理解我最好与最坏的样貌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234623.md#1">如何让兰花重新开花？ 园艺达人教你秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/24/n14233197.md#1">六类茶各有益处  1种茶最消脂、1种茶更延寿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/23/n14232032.md#1">比含糖饮料健康 世界各地9种优格饮报你知</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/12/n14223951.md#1">3种面相易得高血压 按三穴位自然降压</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/26/n14234749.md#1">【健康1+1】历时最长哈佛研究 晚年幸福7秘诀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277490.md#1">故宫六百年不淹水是怎样作到的？为何纪录不保？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281635.md#1">【未解之谜】“黛玉”再次转世归来？陈晓旭的四世轮回</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276161.md#1">【古道人生】商人只重利？义气干霄的商人在这里</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281646.md#1">【佳人传】 作诗千首 持斋修道的汪端</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/29/n14280210.md#1">苏轼小时和黠鼠交手 他为何输了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283716.md#1">【新闻大破解】启动无锚印钞？红朝末象总爆发</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283950.md#1">【时事金扫描】中东新战争？真主党轰以色列</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14283947.md#1">【新闻五人行】大陆金融女学霸轻生 全网痛议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283509.md#1">英国民宅天花板上藏18万只蜜蜂 7年没人知</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283104.md#1">逛Costco时五种令员工和购物者恼火的行为</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283044.md#1">《繁花》在大陆爆红 香港收视率却触底</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282327.md#1">吴亦凡入狱3年 网传其母欲卖豪车换现金</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/4/n14283779.md#1">贝克汉姆夫妇庆银婚 身着25年前紫色礼服放闪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282430.md#1">郑爽未履行金额超1亿 剧集出品方股权被冻结</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14283097.md#1">世界小姐张梓琳晒带娃照 称8岁长女是苗条姐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/2/n14282363.md#1">赚多少钱才够 赚多少才算富人 美国人有答案</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/19/n14273401.md#1">如何规划退休生活？简化生活 让身心受益</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/3/n14282796.md#1">什么是“金钱畸形症”？ 如何应对？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/30/n14280784.md#1">告别湿答答 内外除湿这样做</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281348.md#1">日本北海道之旅 难忘的农庄餐馆</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/4/28/n14235969.htm">美国房价涨不停 一个隐藏原因</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/19920513/djy/blob/master/gb/24/4/28/n14235969.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/4/28/n14235969.htm">美国房价涨不停 一个隐藏原因</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/4/28/n14235969.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
